<resources>
    <string name="app_name">Patitas</string>
    <string name="btn_Protectoras">Protectoras</string>
    <string name="btn_Encontrar">Animales perdidos</string>
    <string name="btn_Blog">Blog</string>
    <string name="title_activity_animales_perdidos">AnimalesPerdidos</string>
    <string name="tab_text_1">Mapa</string>
    <string name="tab_text_2">Agregar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nombre mascota</string>
    <string name="phone">Teléfono de contacto</string>
    <string name="description">Descripción</string>
    <string name="mail">E-mail</string>
    <string name="images_header">Imágenes</string>
    <string name="insertStreet">Introduce la calle</string>
    <string name="insertCity">Introduce la ciudad</string>
    <string name="btnPublicar">Publicar anuncio</string>
    <string name="titleSpinner1">Mascota</string>
    <string name="titleSpinner2">Tipo</string>
    <string name="name2">Nombre Persona Contacto</string>
    <string name="welcomeText">Bienvenidos a Patitas</string>
    <string name="titleComments">Comentarios</string>
    <string name="addComment">Añade un comentario</string>
    <string name="titleLocation">Ubicación de la mascota</string>
    <string name="titleAdd">¿Cómo vas a ayudar hoy?</string>









    <string-array name="statusEntries">
        <item>Estado</item>
        <item>Perdida</item>
        <item>Encontrada</item>
        <item>En adopción</item>
    </string-array>

    <string-array name="typeEntries">
        <item>Elige:</item>
        <item>Perro</item>
        <item>Gato</item>
        <item>Conejo</item>
        <item>Aves</item>
        <item>Otros</item>

    </string-array>


</resources>