<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:textDirection="firstStrongRtl"
        tools:context=".fragments.AddFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/statusEntries"
                    android:minHeight="50dp"
                    android:scrollbarSize="5dp" />

                <Spinner
                    android:id="@+id/spinnerType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/typeEntries"
                    android:minHeight="50dp"
                    android:scrollbarSize="5dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etPetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:minHeight="50dp"
                android:textColor="#020000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etContactPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/name2"
                android:inputType="textPersonName"
                android:textColor="#050000" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:minHeight="50dp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:minHeight="90dp"
                android:textAlignment="viewStart"
                android:textDirection="firstStrongRtl" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPetLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/titleLocation"
                android:textAlignment="center"
                android:textColor="#020000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/etStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/insertStreet"
                android:minHeight="40dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/insertCity"
                android:minHeight="40dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="20dp"
                android:text="@string/images_header"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnBuscar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/btn_buscar" />

            <ImageButton
                android:id="@+id/btnBuscar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/btn_buscar" />

            <ImageButton
                android:id="@+id/btnBuscar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/btn_buscar" />

            <ImageButton
                android:id="@+id/btnBuscar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/btn_buscar" />

            <ImageButton
                android:id="@+id/btnBuscar5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/btn_buscar" />
        </LinearLayout>

        <Button
            android:id="@+id/btnPublicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/rounded_border_button"
            android:minHeight="60dip"
            android:text="@string/btnPublicar"
            android:textColor="#FFFAFA"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>



    </LinearLayout>
</ScrollView>