<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"


            >

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/welcomeText"
                android:textAlignment="center"
                android:textSize="25dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/btn_Protectoras"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_border_button"
                android:onClick="onClick"
                android:text="@string/btn_Protectoras"

                android:textColor="@color/white"
                tools:visibility="visible" />


            <Button
                android:id="@+id/btn_Encuentra"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_border_button"
                android:onClick="onClick"
                android:text="@string/btn_Encontrar"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_Blog"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_border_button"
                android:onClick="onClick"
                android:text="@string/btn_Blog"
                android:textColor="@color/white" />

           <!-- <Button
                android:id="@+id/btnBlog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border_button"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:text="@string/blog_main" /> -->

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>